# godbrain-quantum

./: .clangd  .gcloudignore  .gitignore  BASLAT.bat  Bu  DEPLOYMENT.md  Dockerfile  Dockerfile.dashboard-lite  Dockerfile.genetics  Dockerfile.market-feed  Dockerfile.mobile-api  Dockerfile.quantum-genesis  Dockerfile.voltran  FINAL_VURUS.ps1  GODBRAIN_SYSTEM_UPDATE_DOCS.md  ROLLBACK_PROCEDURE.md  SISTEM  START.bat  SYSTEM_OVERVIEW.md  Weritdata.rdp  access_api.Dockerfile  agg.py  backup_secrets.yaml  calibrate_sniper.py  check-deployment.ps1  check_defensive_mode.py  check_okx.py  cloudbuild-complete.yaml  cloudbuild-dashboard-lite.yaml  cloudbuild-genetics.yaml  cloudbuild-voltran.yaml  cloudbuild.yaml  cloudflared_config.yml  command_center.py  config_center.py  dashboard_logs.txt  dashboard_server.py  deploy-dashboard-only.ps1  deploy-dashboard-v2.ps1  deploy-dashboard-v3.ps1  (+36 more)
alpha/: __init__.py
alpha/onchain/: __init__.py  flow_analyzer.py  smart_money.py  whale_tracker.py
alpha/orderbook/: __init__.py  depth_analyzer.py  imbalance.py  large_orders.py  spread_dynamics.py
alpha/sentiment/: __init__.py  aggregator.py  fear_greed.py
anomaly_hunter/: __init__.py  detectors.py  hunter.py
archive/neural/: cortex.py  mesh.py  trainer.py
archive/quantum_lab/: __init__.py  quantum_daemon.py  quantum_lab_chronos.py  quantum_resonance_lab_v2.py
backtesting/: __init__.py  data_manager.py  engine.py  metrics.py  run_backtest.py  walk_forward.py
backtesting/models/: __init__.py  order.py  position.py  trade.py
backtesting/strategies/: __init__.py  (+1 more)
build_context/: Dockerfile.voltran  agg.py  requirements-voltran.txt
config/: __init__.py  edge_ai_config.json  okx_config.json  okx_trade_config.json  settings.py
core/: __init__.py  cheat_code.py  cheat_consumer.py  data_feeds_bridge.py  double_slit_experiment.py  god_dashboard.py  market_feed.py  resonance_bus.py  sentinel_v2.py  synthia_consciousness.py
core_engine/: CMakeLists.txt  __init__.py  python_wrapper.py
core_engine/include/godbrain/: execution_engine.hpp  memory_pool.hpp  orderbook.hpp  simd.hpp  types.hpp
core_engine/src/: godbrain.cpp  main.cpp
data/: lab_state.json  prices_2025.csv
discoveries/: attractor_20251218_154255.json  attractor_20251218_154306.json  attractor_20251218_154315.json  attractor_20251218_154320.json  attractor_20251218_154326.json  attractor_20251218_154333.json  attractor_20251218_154342.json  attractor_20251218_154357.json  attractor_20251218_154403.json  attractor_20251218_154409.json  attractor_20251218_154415.json  attractor_20251218_154420.json  attractor_20251218_154428.json  attractor_20251218_154440.json  attractor_20251218_154454.json  attractor_20251218_154512.json  attractor_20251218_154545.json  attractor_20251218_154607.json  attractor_20251218_154643.json  attractor_20251218_155145.json  attractor_20251218_155650.json  attractor_20251218_160221.json  attractor_20251218_160731.json  attractor_20251218_161233.json  attractor_20251218_161734.json  attractor_20251218_162235.json  attractor_20251218_162737.json  attractor_20251218_163238.json  attractor_20251218_163739.json  attractor_20251218_164240.json  attractor_20251218_164741.json  attractor_20251218_165242.json  attractor_20251218_165743.json  attractor_20251218_170244.json  attractor_20251218_170544.json  attractor_20251218_170745.json  attractor_20251218_171246.json  attractor_20251218_171747.json  attractor_20251218_172248.json  attractor_20251218_172749.json  (+1374 more)
edge_ai/: __init__.py  inference.py
engines/: __init__.py  decision_engine.py
execution/: __init__.py  executor.py  iceberg.py  slippage_model.py  smart_router.py  twap.py  vwap.py
genetics/: blackjack_lab.py  chaos_lab.py  dna_pusher.py  quantum_lab.py  roulette_lab.py  run_all_labs.py  voltran_bridge.py
godlang/: godlang_logger.py  godlang_policy_backup_20251208_232527.yaml  godlang_pulse.py  godlang_runtime.py  godlang_scribe.py
infrastructure/: __init__.py  chaos_monkey.py  circuit_breaker.py  config.py  dna_tracker.py  exceptions.py  health.py  lab_bridge.py  llm_providers.py  llm_router.py  logging_config.py  metrics.py  mlflow_config.py  multi_exchange.py  prometheus_exporter.py  rate_limiter.py  retry.py  telegram_alerts.py
k8s/: README.md  cloud-migration.yaml  command-center.yaml  deploy.sh  godbrain-complete.yaml  godbrain-deployment.yaml  godbrain-secrets-template.yaml  godbrain-secrets.yaml  monitoring.yaml  neural-gpu.yaml  neural-trainer.yaml  redis-persistent.yaml  seraph-backup.yaml
logs/: active_genome.json  apex_signal.json  apex_state.json  cheat_signals.json  genome_history_latest.json  godlang_pulse_state.json  shadow_comparison.jsonl  tick_latest.json  tick_stream.jsonl
matriks/: GodbrainLink.cs  __init__.py  receiver.py  simulator.py
mobile-app/: Dockerfile  pnpm-lock.yaml
nano_core/: Makefile  README.md  nano_core_demo
neural/: __init__.py  rl_agent.py  simulation_universe.py
portfolio/: __init__.py  correlation.py  optimizer.py  rebalancer.py
quantum_genesis/: __init__.py  evolution_engine.py  genesis_daemon.py  harvester.py  quantum_bridge.py  quantum_dna.py
quantum_lab/: quantum_daemon.py  quantum_resonance_lab_v2_integrated.py
risk/: __init__.py  anomaly_adjuster.py  correlation_sizer.py  liquidity_risk.py  tail_risk.py  var_engine.py
scripts/: daily_backup.ps1  redis_tunnel.bat  start_godbrain.bat
seraph/: Cgodbrain-quantumseraphseraph_v2.py  __init__.py  autonomous_mind.py  codebase_rag.py  config.py  core.py  evolution_daemon.py  long_term_memory.py  memory_backup.py  patch_history.json  seraph_enhanced.py  seraph_jarvis.py  seraph_plutonium.py  system_awareness.py  tools.py
signals/: __init__.py  harvester.py  signal_combiner.py  signal_ranker.py
tests/: __init__.py  conftest.py  test_circuit_breaker.py  test_integration.py  test_seraph_memory.py  test_seraph_prime.py  test_seraph_time.py
tools/: __init__.py  live_executor.py  morning_briefing.py  okx_relax_positions.py  relax_positions.py  scan_positions.py  startup_check.py
ultimate_pack/: README.md  test_v2.py
(+9899 files in other folders)
